c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/extra_credit/switch_on_string.c
// can't use string literal as controlling expression in switch statement
int main(void) {
    switch ("foo") {
        default:
        return 0;
    }
}